3주차 스터디/ 내용 추가 및 이미지 추가